Prepare for release version 1.5.3 - Add: Developer's homepage to the 'other Plugins' list - Update: Smoothy scroll to an anchor using Javascript - Bugfix: Set the vertical align for each cell in the Reference container to TOP
git-svn-id: https://plugins.svn.wordpress.org/footnotes/trunk@1002027 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/public.css
+++ b/css/public.css
@@ -86,6 +86,10 @@
 	border: none;
 }
 
+.footnote-reference-container > tbody > tr > td {
+    vertical-align: top;
+}
+
 .footnote-reference-container > tbody > tr > td:first-child {
 	white-space: nowrap;
 	padding-right: 5px;
